Trying to fix a Routes bug

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://musictastingclub.com",
+  "homepage": "https://github.com/MusicTastingClubNU/mtc",
   "name": "mtc6",
   "version": "0.1.0",
   "private": true,
