Routes bug fix attempt 2

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/MusicTastingClubNU/mtc",
+  "homepage": "https://musictastingclubnu.github.io/mtc/",
   "name": "mtc6",
   "version": "0.1.0",
   "private": true,
