Trying to fix the routes issue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://musictastingclubnu.github.io/mtc/",
+  "homepage": "https://musictastingclub.com",
   "name": "mtc6",
   "version": "0.1.0",
   "private": true,
