--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-src/components/DEV/Dev.tsx
+src/components/DEV/DevPAGE.tsx
+src/components/DEV/MTCoders.tsx
