--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ yarn-error.log*
 
 src/components/DEV/DevPAGE.tsx
 src/components/DEV/MTCoders.tsx
+src/components/DEV/AidanComponent.tsx
+src/components/DEV/DanielComponent.tsx
