--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["parse-json", "react-transition-group"]
   },
   "include": ["src"],
   "typeRoots": ["node_modules/@types", "node_modules/@mui"],
