--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/lab": "^6.0.0-beta.25",
     "@mui/material": "^6.4.2",
     "@mui/x-date-pickers": "^7.24.1",
+    "@tailwindcss/vite": "^4.1.4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
@@ -32,6 +33,7 @@
     "react-router-dom": "^7.1.4",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.14",
+    "tailwindcss": "^4.1.4",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
